Fix modal title not wrapping

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -1000,6 +1000,7 @@ dialog::backdrop {
     width: 100%;
     margin: 0;
     text-align: center;
+    word-wrap: break-word;
 }
 
 #modal-body {
